added video section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="#music">Music</a>
                     </li>
                     <li class="nav-item ml-auto">
+                        <a class="nav-link" href="#video">Video</a>
+                    </li>
+                    <li class="nav-item ml-auto">
                         <a class="nav-link" href="#tour">Tour</a>
                     </li>
                     <li class="nav-item ml-auto">
@@ -109,6 +112,21 @@
         </div>
     </section>
     
+    <section id="video">
+        <div class="container-fluid video-container">
+            <div class="row">
+                <div class="col uppercase text-center video-heading">
+                    <h2>Video</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12" align="center">
+                    <iframe width="768" height="480" src="https://www.youtube.com/embed/zI_SBAkdKzc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <section id="tour">
         <div class="container-fluid tour-container tour-padding">
             <div class="row">
@@ -116,7 +134,7 @@
                     <h2>Tour</h2>
                 </div>
             </div>
-            <div class="">
+            <div> 
                 <div class="row tour-grid">
                     <div class="col-sm-3">20 March 2020</div>
                     <div class="col-sm-3">M&S Bank Arena</div>
