added about content, changed image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <div class="row">
                   <div class="col-4 ">
                       <div class="jumbotron">
-                          <p class="lead homepage-header">Back on tour with 20th anniversay of White Ladder</p>
+                          <p class="lead homepage-header">White Ladder 20th anniversay tour</p>
                       </div>
                   </div>
               </div>
@@ -59,16 +59,23 @@
     <section id="about">
         <div class="container-fluid about-container">
             <div class="row">
-                <div class="col-6">
-                    <section>
+                <div class="col-6"></div>
+                <div class="col-6 about-col">
+                    <div>
                         <h2 class="about-heading uppercase text-center">About</h2>
-                        <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-                            nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-                            blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem
-                            insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.
-                            Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
-                            in futurum.</p>
-                    </section>
+                        <p class="about-paragraph">British singer-songwriter David Gray released his first album in 1993 and received worldwide attention after the release of White Ladder six years later. It was the first of three UK chart-toppers in six years for Gray, of which the latter two also made the Top 17 in the United States. White Ladder became the fifth best-selling album of the 2000s in the UK. It is ranked the tenth best-selling album of the 21st century in the United Kingdom. Gray has been nominated for four Brit Awards – twice for Best British Male.<br><br>Gray's first two albums, A Century Ends and Flesh, were issued in 1993 and 1994 respectively and led to Gray becoming popular in folk-rock circles. In 1996 Gray released his third album, Sell, Sell, Sell. Despite critical acclaim, the album did not chart, but the song "Late Night Radio" received airplay on alternative UK radio stations.<br>
+<br>The re-release of Gray's fourth record album, White Ladder, in 2000 on ATO Records, brought him commercial success and critical attention. While his first three albums featured acoustic folk songs and guitar-based alternative rock, White Ladder introduced his now-trademark folktronic sound. The album included his best-known songs: "This Year's Love", "Babylon", "Please Forgive Me" and "Sail Away". White Ladder was originally released on Gray's own label IHT Records in November 1998. After its re-release, in June 2000, "Babylon" hit No. 5 in the UK Singles Chart; it remains his biggest UK hit to date.<br>
+<br>The album was No. 1 on the UK Albums Chart, two years and five months after its original release, spending a total of 151 weeks on the chart. Aside from "Please Forgive Me", which charted at No. 72 on the UK Singles Chart, all other single releases charted within the Top 20; the re-released "Please Forgive Me" charted at number 18, and "Say Hello, Wave Goodbye" and "Sail Away" peaked at number 26.<br>
+<br>The year 2001 also saw the release of a rarities compilation of Gray's early works, The EPs 1992-1994, as well as an album of newly-recorded previously unreleased songs, Lost Songs 95-98, both of which followed White Ladder into the Top 20 in the UK Albums Chart.
+<br><br>In November 2002, Gray released the follow-up to White Ladder, entitled A New Day at Midnight. The new release did not receive the same critical acclaim as its predecessor, but still went straight in at number 1, selling nearly 150,000 copies in its first week of release. It went on to achieve platinum status within a year, eventually being certified four times platinum overall, and was the second-biggest selling album by a UK artist in 2002. 
+<br><br>After a three-year hiatus which saw him wind down his recording and touring schedule due to exhaustion, Gray returned with his seventh album, Life in Slow Motion, in September 2005. Like its predecessor, it topped the UK Albums Chart in its first week of release. 
+<br><br>In March 2007, Gray released the compilation album Shine: The Best of the Early Years. On 7 July 2007, Gray performed with Damien Rice at the UK leg of Live Earth at Wembley Stadium in London. 
+<br><br>A new album, entitled Draw the Line, was be released on 14 September 2009 in the UK and on 22 September in the United States. The album features guest appearances by Annie Lennox and Jolie Holland. The album's first single, "Fugitive", was released on 7 September 2009, coinciding with the start of an expansive world tour.
+<br><br>Foundling was released in August 2010, a double album: the first CD consists of 11 new songs and the second consists of eight previously unreleased songs. A ninth previously unreleased song is included when Foundling is ordered through the iTunes store. His 10th studio album, Mutineers in 2014, was his first in four years.
+<br><br>Gray released the compilation The Best of David Gray, on CD, double CD and LP in October 2016, featuring a selection of tracks from his back catalogue as well as two new recordings. The album, released in conjunction with IHT Records, has already been released as a dynamic playlist on Spotify that automatically changes shape every Monday. 
+<br><br>In 2019 he announced his White Ladder 20th Anniversary tour for 2020.
+</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -82,30 +89,33 @@
                     <h2>Music</h2>
                 </div>
             </div>
+            <div class="row">
+                
+            </div>
             <div class="row music-grid">
                 <div class="col-sm-4 music-grid">
                     <img src="assets/images/white_ladder_20th_anniversary.jpg" class="img-fluid" alt="White ladder 20th anniversary edition">
-                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk" target="_blank" role="button">BUY NOW</a>
+                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk/White-Ladder-20th-Anniversary-David/dp/B07YMFX4RZ/ref=sr_1_3?keywords=david+gray&qid=1571568392&sr=8-3k" target="_blank" role="button">BUY NOW</a>
                 </div>
                 <div class="col-sm-4 music-grid">
                     <img src="assets/images/gold_in_a_brass_age.jpg" class="img-fluid" alt="Gold in a brass age">
-                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk" target="_blank" role="button">BUY NOW</a>
+                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk/Gold-Brass-Age-David-Gray/dp/B07J9L3LD8/ref=sr_1_2?keywords=david+gray&qid=1571568392&sr=8-2" target="_blank" role="button">BUY NOW</a>
                 </div>
                 <div class="col-sm-4 music-grid">
                     <img src="assets/images/greatest_hits.jpg" class="img-fluid" alt="Greatest hits">
-                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk" target="_blank" role="button">BUY NOW</a>
+                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk/Greatest-Hits-David-Gray/dp/B00L0T6QMQ/ref=sr_1_5?keywords=david+gray&qid=1571568392&sr=8-5" target="_blank" role="button">BUY NOW</a>
                 </div>
                 <div class="col-sm-4 music-grid">
                     <img src="assets/images/life_in_slow_motion.jpg" class="img-fluid" alt="Life in slow motion">
-                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk" target="_blank" role="button">BUY NOW</a>
+                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk/Life-Slow-Motion-David-Gray/dp/B00L0T5T2O/ref=sr_1_6?keywords=david+gray&qid=1571568392&sr=8-6" target="_blank" role="button">BUY NOW</a>
                 </div>
                 <div class="col-sm-4 music-grid">
                     <img src="assets/images/white_ladder.jpg" class="img-fluid" alt="White ladder">
-                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk" target="_blank" role="button">BUY NOW</a>
+                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk/White-Ladder-David-Gray/dp/B00L0T9OQ6/ref=sr_1_1?keywords=david+gray&qid=1571568392&sr=8-1" target="_blank" role="button">BUY NOW</a>
                 </div>
                 <div class="col-sm-4 music-grid">
                     <img src="assets/images/sell_sell_sell.jpg" class="img-fluid" alt="Sell sell sell">
-                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk" target="_blank" role="button">BUY NOW</a>
+                    <a class="btn btn-secondary btn-lg" href="https://www.amazon.co.uk/Sell-David-Gray/dp/B000002SVX/ref=sr_1_30?keywords=david+gray&qid=1571568804&sr=8-30" target="_blank" role="button">BUY NOW</a>
                 </div>
             </div>
         </div>
@@ -120,8 +130,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12" align="center">
-                    <iframe width="768" height="480" src="https://www.youtube.com/embed/zI_SBAkdKzc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
+                <div class="embed-responsive embed-responsive-16by9" align="center">
+                    <iframe class="embed-responsive-item" width="768" height="480" src="https://www.youtube.com/embed/zI_SBAkdKzc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
                 </div>
             </div>
         </div>
